feat(api): implement password-based auth
